# Monarch

./: +app_update  +quit  .eslintrc.json  .gitignore  .prettierrc.json  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  typescript  vite.config.ts  vite.config.ts.timestamp-1688403689270.mjs
.github/workflows/: build-monarch.yml  create-release.yml
docs/: steam_login.md  store_interface.md
squashfs-root/: monarch.desktop
squashfs-root/apprun-hooks/: linuxdeploy-plugin-gtk.sh
squashfs-root/usr/lib/: libWPEBackend-fdo-1.0.so.1  libX11-xcb.so.1  libXau.so.6  libXcomposite.so.1  libXcursor.so.1  libXdamage.so.1  libXdmcp.so.6  libXext.so.6  libXfixes.so.3  libXi.so.6  libXinerama.so.1  libXrandr.so.2  libXrender.so.1  libatk-1.0.so.0  libatk-bridge-2.0.so.0  libatomic.so.1  libatspi.so.0  libavahi-client.so.3  libavahi-common.so.3  libavif.so.15  libblkid.so.1  libbrotlicommon.so.1  libbrotlidec.so.1  libbrotlienc.so.1  libbz2.so.1.0  libcairo-gobject.so.2  libcairo.so.2  libcanberra-gtk3.so.0  libcanberra.so.0  libcap.so.2  libcloudproviders.so.0  libcolord.so.2  libcups.so.2  libdatrie.so.1  libdav1d.so.6  libdbus-1.so.3  libdw.so.1  libelf.so.1  libenchant-2.so.2  libepoxy.so.0  (+92 more)
squashfs-root/usr/lib/gdk-pixbuf-2.0/2.10.0/: loaders.cache
squashfs-root/usr/lib/gtk-3.0/3.0.0/: immodules.cache
squashfs-root/usr/lib/webkit2gtk-4.0/: WebKitNetworkProcess  WebKitWebProcess
squashfs-root/usr/share/applications/: monarch.desktop
squashfs-root/usr/share/glib-2.0/schemas/: gschemas.compiled  org.gnome.desktop.background.gschema.xml  org.gnome.desktop.enums.xml  org.gnome.nm-applet.eap.gschema.xml
src/: App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: main.rs  mod.rs
src-tauri/src/monarch_games/: blizzard.rs  commands.rs  epic.rs  games.rs  mod.rs  monarch_client.rs  monarch_library.rs  monarchgame.rs  steam.rs  steam_client.rs  stores.rs
src-tauri/src/monarch_games/linux/: blizzard.rs  epic.rs  mod.rs  steam.rs  umu.rs
src-tauri/src/monarch_games/macos/: steam.rs
src-tauri/src/monarch_games/unix/: blizzard.rs  steam.rs
src-tauri/src/monarch_games/windows/: blizzard.rs  epic.rs  mod.rs  steam.rs
src-tauri/src/monarch_library/: collections.rs  commands.rs  games_library.rs  mod.rs
src-tauri/src/monarch_utils/: commands.rs  downloader.rs  housekeeping.rs  logger.rs  mod.rs  monarch_credentials.rs  monarch_download.rs  monarch_fs.rs  monarch_logger.rs  monarch_macros.rs  monarch_miniwindow.rs  monarch_results.rs  monarch_run.rs  monarch_settings.rs  monarch_state.rs  monarch_terminal.rs  monarch_vdf.rs  monarch_web.rs  monarch_windows.rs  monarch_winreg.rs  quicklaunch.rs  webscraping.rs  winreg_searcher.rs
src/_ui/button/: index.tsx
src/_ui/error/: index.tsx
src/_ui/gameCard/: index.tsx
src/_ui/miniwindowPage/: index.tsx
src/_ui/modal/: index.tsx
src/_ui/noticeBar/: index.tsx
src/_ui/page/: index.tsx  navigation-menu.tsx  sidemenu.tsx
src/_ui/searchBar/: index.tsx
src/_ui/spinner/: index.tsx
src/common/button/: index.tsx
src/common/gameCard/: index.tsx
src/common/page/: index.tsx  sidemenu.tsx
src/common/searchBar/: index.tsx
src/common/spinner/: index.tsx
src/global/: zoomControls.ts
src/global/contexts/: collectionsProvider.tsx  gamesProvider.tsx  libraryProvider.tsx  protonVersionsProvider.tsx  searchGamesProvider.tsx  settingsProvider.tsx
src/global/icons/: index.ts
src/global/routes/: index.tsx
src/global/theme/: globalStyles.tsx  index.ts  styled-components.d.ts
src/global/types/: index.ts
src/modules/home/: index.tsx
src/modules/mooseTestPage/: index.tsx
src/modules/notFound/: index.tsx
src/modules/search/: index.tsx
src/modules/settings/: index.tsx
src/pages/home/: index.tsx
src/pages/mooseTestPage/: index.tsx
src/pages/notFound/: index.tsx
src/pages/quicklaunch/: initWindows.ts
src/pages/quicklaunch/_components/: gameButton.tsx
src/pages/search/: index.tsx
src/pages/settings/: index.tsx
src/quicklaunch/: index.html  initQuicklaunch.ts  initShortcuts.ts  initWindows.ts  main.tsx  quicklaunch.html  quicklaunch.tsx
src/quicklaunch/_components/: gameButton.tsx  quicklaunch.tsx
src/terminal/: index.html  index.tsx  initTerminal.ts  main.ts  main.tsx  style.css  terminal.html
src/terminal/_components/: terminal.tsx
