[package]
name = "Monarch"
version = "0.0.1"
description = "A FOSS game launcher/manager."
authors = ["an0nymoos3", "Dre-Van-den-Hooff"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Monarch-Launcher/Monarch"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "1.7.2", features = [
  "global-shortcut-all",
  "shell-all",
  "dialog-ask",
  "dialog-confirm",
  "dialog-message",
  "dialog-open",
  "fs-read-file",
  "protocol-asset",
  "window-set-min-size",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Monarch dependencies
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8.11", features = ["preserve_order"] }
reqwest = "0.11.0"
scraper = "0.19.0"
log = "0.4.17"
log4rs = "1.2.0"
regex = "1.8.1"
keyvalues-parser = "0.2.0"
sysinfo = "0.29.7"
once_cell = "1.18.0"
keyring = "2"
anyhow = "1.0.86"
portable-pty = "0.9.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
