[package]
name = "Monarch"
version = "0.0.1"
description = "A FOSS game launcher/manager."
authors = ["an0nymoos3", "Dre-Van-den-Hooff"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Monarch-Launcher/Monarch"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2", features = [
  "protocol-asset",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Monarch dependencies
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8.11", features = ["preserve_order"] }
reqwest = "0.11.0"
scraper = "0.19.0"
tracing = { version = "0.1.41", features = [
  "max_level_trace",
  "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.8.1"
keyvalues-serde = "0.2.2"
sysinfo = "0.29.7"
once_cell = "1.18.0"
keyring = "2"
anyhow = "1.0.86"
portable-pty = "0.9.0"
simple-steam-totp = { version = "0.1.0", git = "https://github.com/Monarch-Launcher/simple-steam-totp.git" }
rand = "0.9.1"
zip = "4.3.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
